# tabt

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md
.claude/skills/app-icon/: SKILL.md  make-icon.sh
.claude/skills/run-tabt/: driver.mjs
bundle/: AppIcon.icns  Info.plist  make-dev-cert.sh
tabt-app/: Cargo.toml
tabt-app/src/: app.rs  config.rs  divider.rs  header.rs  main.rs  menu.rs  note.rs  placeholder.rs  pty.rs  settings.rs  settings_dialog.rs  sidebar.rs  theme.rs  toggle.rs  view.rs
tabt-core/: Cargo.toml
tabt-core/src/: lib.rs
